--- a/firstaidcpd/gymhazardspotting.html
+++ b/firstaidcpd/gymhazardspotting.html
@@ -107,7 +107,7 @@ Your browser does not support the video tag.
 </div>
 </div>
 <div class="image-wrapper" id="imageWrapper">
-<img src="https://pt-academy-embeds.pages.dev/firstaidcpd/Gym_Hazard_Scene.heic" alt="Gym Scene" class="gym-image" id="gymImage">
+<img src="https://pt-academy-embeds.pages.dev/firstaidcpd/Gym_Hazard_Scene.webp" alt="Gym Scene" class="gym-image" id="gymImage">
 <div class="hazard-zone" id="zone1" style="left: 3%; top: 82%; width: 12%; height: 12%;"></div>
 <div class="hazard-zone" id="zone2" style="left: 72%; top: 68%; width: 10%; height: 15%;"></div>
 <div class="hazard-zone" id="zone3" style="left: 80%; top: 52%; width: 15%; height: 20%;"></div>
