--- a/firstaidcpd/firstaid_incidentreporting.html
+++ b/firstaidcpd/firstaid_incidentreporting.html
@@ -25,16 +25,28 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 .tab.active {color: #2196f3; border-bottom-color: #2196f3; background: white;}
 .tab-content {display: none; background: white; padding: 30px; border-radius: 0 0 12px 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1); min-height: 500px;}
 .tab-content.active {display: block;}
-.content-grid {display: grid; gap: 20px;}
-.info-card {background: #f8f9fa; border-left: 4px solid #2196f3; padding: 20px; border-radius: 8px;}
-.card-title {font-size: 18px; font-weight: 700; color: #2196f3; margin-bottom: 10px;}
+.content-grid {display: grid; gap: 12px;}
+.info-card {background: white; border: 2px solid #e9ecef; border-radius: 8px; overflow: hidden; cursor: pointer; transition: all 0.3s ease;}
+.info-card:hover {border-color: #2196f3;}
+.card-header {padding: 18px 20px; display: flex; justify-content: space-between; align-items: center; background: #f8f9fa;}
+.card-header-left {display: flex; align-items: center; gap: 12px;}
+.card-icon {font-size: 28px;}
+.card-title {font-size: 18px; font-weight: 700; color: #2196f3;}
+.expand-icon {font-size: 20px; color: #2196f3; transition: transform 0.3s ease;}
+.info-card.active .expand-icon {transform: rotate(180deg);}
+.card-content {max-height: 0; overflow: hidden; transition: max-height 0.4s ease;}
+.card-content-inner {padding: 20px;}
 .card-text {font-size: 15px; line-height: 1.7; color: #555;}
-.practices-grid {display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin-top: 20px;}
-.practice-item {background: white; border: 2px solid #e9ecef; padding: 18px; border-radius: 8px; transition: all 0.2s ease;}
-.practice-item:hover {border-color: #2196f3; transform: translateY(-2px);}
-.practice-icon {font-size: 32px; margin-bottom: 10px;}
-.practice-title {font-size: 16px; font-weight: 700; color: #333; margin-bottom: 8px;}
-.practice-text {font-size: 14px; line-height: 1.6; color: #666;}
+.practices-grid {display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 20px;}
+.practice-item {background: transparent; perspective: 1000px; height: 200px;}
+.practice-inner {position: relative; width: 100%; height: 100%; text-align: center; transition: transform 0.6s; transform-style: preserve-3d;}
+.practice-item:hover .practice-inner {transform: rotateY(180deg);}
+.practice-front, .practice-back {position: absolute; width: 100%; height: 100%; backface-visibility: hidden; border-radius: 12px; padding: 20px; display: flex; flex-direction: column; justify-content: center; align-items: center;}
+.practice-front {background: linear-gradient(135deg, #2196f3, #1976d2); color: white; box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
+.practice-back {background: white; border: 3px solid #2196f3; transform: rotateY(180deg); box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
+.practice-icon {font-size: 48px; margin-bottom: 15px;}
+.practice-title {font-size: 20px; font-weight: 700; margin-bottom: 0;}
+.practice-text {font-size: 14px; line-height: 1.6; color: #333;}
 .report-example {background: white; border: 3px solid #2196f3; padding: 30px; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1); max-width: 800px; margin: 0 auto; position: relative;}
 .report-header {background: #2196f3; color: white; padding: 20px; margin: -30px -30px 20px -30px; border-radius: 9px 9px 0 0;}
 .report-title {font-size: 24px; font-weight: 700; margin-bottom: 5px;}
@@ -81,59 +93,145 @@ to {opacity: 1; transform: translateY(0);}
 </div>
 <div class="tab-content active">
 <div class="content-grid">
-<div class="info-card">
-<div class="card-title">🛡️ Legal Protection</div>
+<div class="info-card active" onclick="toggleAccordion(this)">
+<div class="card-header">
+<div class="card-header-left">
+<div class="card-icon">🛡️</div>
+<div class="card-title">Legal Protection</div>
+</div>
+<div class="expand-icon">▼</div>
+</div>
+<div class="card-content">
+<div class="card-content-inner">
 <div class="card-text">Proper documentation protects both organisations and staff by creating an objective record of events and responses. In the event of legal claims or disputes, comprehensive incident reports provide evidence of appropriate actions taken and duty of care fulfilled.</div>
 </div>
-<div class="info-card">
-<div class="card-title">📚 Learning Opportunities</div>
+</div>
+</div>
+<div class="info-card" onclick="toggleAccordion(this)">
+<div class="card-header">
+<div class="card-header-left">
+<div class="card-icon">📚</div>
+<div class="card-title">Learning Opportunities</div>
+</div>
+<div class="expand-icon">▼</div>
+</div>
+<div class="card-content">
+<div class="card-content-inner">
 <div class="card-text">Incident reports enable organisations to learn from events and prevent recurrence. Analysing patterns in incidents reveals training needs, hazard identification requirements, and procedural improvements necessary to enhance safety.</div>
 </div>
-<div class="info-card">
-<div class="card-title">⚖️ Regulatory Compliance</div>
+</div>
+</div>
+<div class="info-card" onclick="toggleAccordion(this)">
+<div class="card-header">
+<div class="card-header-left">
+<div class="card-icon">⚖️</div>
+<div class="card-title">Regulatory Compliance</div>
+</div>
+<div class="expand-icon">▼</div>
+</div>
+<div class="card-content">
+<div class="card-content-inner">
 <div class="card-text">Health and safety regulations require documentation of workplace incidents. Failure to maintain proper records can result in regulatory penalties, license restrictions, and legal consequences for organisations and management.</div>
 </div>
-<div class="info-card">
-<div class="card-title">💼 Insurance Support</div>
+</div>
+</div>
+<div class="info-card" onclick="toggleAccordion(this)">
+<div class="card-header">
+<div class="card-header-left">
+<div class="card-icon">💼</div>
+<div class="card-title">Insurance Support</div>
+</div>
+<div class="expand-icon">▼</div>
+</div>
+<div class="card-content">
+<div class="card-content-inner">
 <div class="card-text">Insurance claims for incidents require comprehensive documentation. Detailed incident reports support claim processing, demonstrate risk management efforts, and may influence premium calculations and coverage terms.</div>
 </div>
-<div class="info-card">
-<div class="card-title">📊 Trend Monitoring</div>
+</div>
+</div>
+<div class="info-card" onclick="toggleAccordion(this)">
+<div class="card-header">
+<div class="card-header-left">
+<div class="card-icon">📊</div>
+<div class="card-title">Trend Monitoring</div>
+</div>
+<div class="expand-icon">▼</div>
+</div>
+<div class="card-content">
+<div class="card-content-inner">
 <div class="card-text">Systematic documentation enables identification of trends and patterns indicating systemic issues. Regular review of incident reports reveals recurring problems requiring organisational attention, policy changes, or facility modifications.</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div class="tab-content">
 <div class="practices-grid">
 <div class="practice-item">
+<div class="practice-inner">
+<div class="practice-front">
 <div class="practice-icon">⏱️</div>
 <div class="practice-title">Timeliness</div>
+</div>
+<div class="practice-back">
 <div class="practice-text">Complete reports as soon as possible while details remain clear. Memory fades rapidly - incidents documented hours or days later lose accuracy and critical details.</div>
 </div>
+</div>
+</div>
 <div class="practice-item">
+<div class="practice-inner">
+<div class="practice-front">
 <div class="practice-icon">🎯</div>
 <div class="practice-title">Objectivity</div>
+</div>
+<div class="practice-back">
 <div class="practice-text">Record facts observed rather than assumptions, interpretations, or blame. Use neutral language describing what you saw, heard, and did - not what you think happened or why.</div>
 </div>
+</div>
+</div>
 <div class="practice-item">
+<div class="practice-inner">
+<div class="practice-front">
 <div class="practice-icon">🔍</div>
 <div class="practice-title">Specificity</div>
+</div>
+<div class="practice-back">
 <div class="practice-text">Provide detailed descriptions rather than vague generalisations. Instead of "client fell," write "client lost balance while dismounting treadmill, fell backwards, landing on right hip."</div>
 </div>
+</div>
+</div>
 <div class="practice-item">
+<div class="practice-inner">
+<div class="practice-front">
 <div class="practice-icon">📋</div>
 <div class="practice-title">Comprehensiveness</div>
+</div>
+<div class="practice-back">
 <div class="practice-text">Include all relevant information even if seeming minor. Environmental factors, equipment conditions, witnesses present, and exact sequences of events may prove crucial later.</div>
 </div>
-<div class="practice-item">
-<div class="practice-icon">✍️</div>
-<div class="practice-title">Legibility</div>
-<div class="practice-text">Ensure handwritten reports are clearly readable or use typed documentation. Illegible reports cannot fulfill their protective and learning functions - clarity is essential.</div>
+</div>
 </div>
 <div class="practice-item">
+<div class="practice-inner">
+<div class="practice-front">
+<div class="practice-icon">✍️</div>
+<div class="practice-title">Legibility</div>
+</div>
+<div class="practice-back">
+<div class="practice-text">Ensure handwritten reports are clearly readable or use typed documentation. Illegible reports cannot fulfill their protective and learning functions - clarity is essential.</div>
+</div>
+</div>
+</div>
+<div class="practice-item">
+<div class="practice-inner">
+<div class="practice-front">
 <div class="practice-icon">🔒</div>
 <div class="practice-title">Confidentiality</div>
+</div>
+<div class="practice-back">
 <div class="practice-text">Store reports securely, limit access to authorised personnel only, and comply with GDPR. Never discuss incidents casually or share details on social media - this violates legal and professional standards.</div>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -266,6 +364,22 @@ document.body.style.visibility = 'visible';
 window.showContent = function() {
 document.querySelector('.cover-screen').classList.add('hidden');
 document.querySelector('.main-content').classList.add('visible');
+setTimeout(function() {
+const firstCard = document.querySelector('.info-card');
+const firstContent = firstCard.querySelector('.card-content');
+firstContent.style.maxHeight = firstContent.scrollHeight + 'px';
+}, 100);
+};
+window.toggleAccordion = function(card) {
+const content = card.querySelector('.card-content');
+const isActive = card.classList.contains('active');
+if (isActive) {
+card.classList.remove('active');
+content.style.maxHeight = null;
+} else {
+card.classList.add('active');
+content.style.maxHeight = content.scrollHeight + 'px';
+}
 };
 window.switchTab = function(index) {
 const tabs = document.querySelectorAll('.tab');
