--- a/firstaidcpd/firstaid_incidentreporting.html
+++ b/firstaidcpd/firstaid_incidentreporting.html
@@ -9,30 +9,30 @@
 html, body {background: #f8f9fa; min-height: 100vh;}
 body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; padding: 20px; opacity: 1; visibility: visible;}
 .doc-container {max-width: 1200px; margin: 0 auto;}
-.cover-screen {background: linear-gradient(135deg, #2196f3 0%, #1976d2 100%); border-radius: 12px; padding: 80px 40px; text-align: center; box-shadow: 0 4px 20px rgba(0,0,0,0.15); cursor: pointer; transition: all 0.3s ease; min-height: 500px; display: flex; flex-direction: column; align-items: center; justify-content: center;}
+.cover-screen {background: linear-gradient(135deg, #C6A906 0%, #e0c040 100%); border-radius: 12px; padding: 80px 40px; text-align: center; box-shadow: 0 4px 20px rgba(0,0,0,0.15); cursor: pointer; transition: all 0.3s ease; min-height: 500px; display: flex; flex-direction: column; align-items: center; justify-content: center;}
 .cover-screen:hover {transform: translateY(-5px); box-shadow: 0 8px 30px rgba(0,0,0,0.2);}
 .cover-screen.hidden {display: none;}
 .cover-icon {font-size: 120px; margin-bottom: 30px;}
 .cover-title {font-size: 42px; font-weight: 700; color: white; margin-bottom: 20px; text-shadow: 2px 2px 4px rgba(0,0,0,0.2);}
 .cover-subtitle {font-size: 20px; color: white; margin-bottom: 40px; opacity: 0.95; line-height: 1.6; max-width: 600px;}
-.cover-button {background: white; color: #2196f3; padding: 18px 50px; border-radius: 30px; font-size: 18px; font-weight: 700; border: none; cursor: pointer; transition: all 0.3s ease; text-transform: uppercase; letter-spacing: 1px;}
+.cover-button {background: white; color: #C6A906; padding: 18px 50px; border-radius: 30px; font-size: 18px; font-weight: 700; border: none; cursor: pointer; transition: all 0.3s ease; text-transform: uppercase; letter-spacing: 1px;}
 .cover-button:hover {transform: scale(1.05); box-shadow: 0 4px 15px rgba(0,0,0,0.3);}
 .main-content {display: none;}
 .main-content.visible {display: block;}
 .tabs {background: white; border-radius: 12px 12px 0 0; display: flex; box-shadow: 0 2px 12px rgba(0,0,0,0.1); overflow: hidden;}
 .tab {flex: 1; padding: 20px; text-align: center; font-size: 16px; font-weight: 700; color: #666; cursor: pointer; transition: all 0.3s ease; border-bottom: 3px solid transparent;}
 .tab:hover {background: #f8f9fa; color: #333;}
-.tab.active {color: #2196f3; border-bottom-color: #2196f3; background: white;}
+.tab.active {color: #C6A906; border-bottom-color: #C6A906; background: white;}
 .tab-content {display: none; background: white; padding: 30px; border-radius: 0 0 12px 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1); min-height: 500px;}
 .tab-content.active {display: block;}
 .content-grid {display: grid; gap: 12px;}
 .info-card {background: white; border: 2px solid #e9ecef; border-radius: 8px; overflow: hidden; cursor: pointer; transition: all 0.3s ease;}
-.info-card:hover {border-color: #2196f3;}
+.info-card:hover {border-color: #C6A906;}
 .card-header {padding: 18px 20px; display: flex; justify-content: space-between; align-items: center; background: #f8f9fa;}
 .card-header-left {display: flex; align-items: center; gap: 12px;}
 .card-icon {font-size: 28px;}
-.card-title {font-size: 18px; font-weight: 700; color: #2196f3;}
-.expand-icon {font-size: 20px; color: #2196f3; transition: transform 0.3s ease;}
+.card-title {font-size: 18px; font-weight: 700; color: #C6A906;}
+.expand-icon {font-size: 20px; color: #C6A906; transition: transform 0.3s ease;}
 .info-card.active .expand-icon {transform: rotate(180deg);}
 .card-content {max-height: 0; overflow: hidden; transition: max-height 0.4s ease;}
 .card-content-inner {padding: 20px;}
@@ -42,17 +42,17 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 .practice-inner {position: relative; width: 100%; height: 100%; text-align: center; transition: transform 0.6s; transform-style: preserve-3d;}
 .practice-item:hover .practice-inner {transform: rotateY(180deg);}
 .practice-front, .practice-back {position: absolute; width: 100%; height: 100%; backface-visibility: hidden; border-radius: 12px; padding: 20px; display: flex; flex-direction: column; justify-content: center; align-items: center;}
-.practice-front {background: linear-gradient(135deg, #2196f3, #1976d2); color: white; box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
-.practice-back {background: white; border: 3px solid #2196f3; transform: rotateY(180deg); box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
+.practice-front {background: linear-gradient(135deg, #C6A906, #e0c040); color: white; box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
+.practice-back {background: white; border: 3px solid #C6A906; transform: rotateY(180deg); box-shadow: 0 4px 12px rgba(0,0,0,0.1);}
 .practice-icon {font-size: 48px; margin-bottom: 15px;}
 .practice-title {font-size: 20px; font-weight: 700; margin-bottom: 0;}
 .practice-text {font-size: 14px; line-height: 1.6; color: #333;}
-.report-example {background: white; border: 3px solid #2196f3; padding: 30px; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1); max-width: 800px; margin: 0 auto; position: relative;}
-.report-header {background: #2196f3; color: white; padding: 20px; margin: -30px -30px 20px -30px; border-radius: 9px 9px 0 0;}
+.report-example {background: white; border: 3px solid #C6A906; padding: 30px; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1); max-width: 800px; margin: 0 auto; position: relative;}
+.report-header {background: #C6A906; color: white; padding: 20px; margin: -30px -30px 20px -30px; border-radius: 9px 9px 0 0;}
 .report-title {font-size: 24px; font-weight: 700; margin-bottom: 5px;}
 .report-subtitle {font-size: 14px; opacity: 0.9;}
 .form-section {margin-bottom: 25px; position: relative;}
-.section-label {font-size: 12px; font-weight: 700; color: #2196f3; text-transform: uppercase; margin-bottom: 8px; display: block;}
+.section-label {font-size: 12px; font-weight: 700; color: #C6A906; text-transform: uppercase; margin-bottom: 8px; display: block;}
 .form-field {background: #f8f9fa; padding: 12px; border-radius: 6px; border: 2px solid #e9ecef; font-size: 14px; color: #333; line-height: 1.6;}
 .info-hotspot {position: absolute; top: 0; right: 0; width: 32px; height: 32px; border-radius: 50%; background: #C6A906; color: white; border: none; font-size: 18px; font-weight: 700; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: all 0.2s ease; animation: pulse 2s infinite;}
 .info-hotspot:hover {background: #e0c040; transform: scale(1.1); animation: none;}
