--- a/firstaidcpd/firstaid_emergencyrecognition.html
+++ b/firstaidcpd/firstaid_emergencyrecognition.html
@@ -241,7 +241,7 @@
  <div class="back-section">
  <div class="section-label">Appropriate Response</div>
  <div class="section-content">
- Alert designated first aiders and call 999 immediately. If trained personnel and AED available, CPR and defibrillation required. Untrained persons should follow dispatcher instructions.
+ Alert designated first aiders and call 999 immediately. If trained personnel and AED available, CPR and defibrillation required. Untrained persons should follow call handler instructions.
  </div>
  </div>
  
