--- a/firstaidcpd/firstaid_emergencyrecognition.html
+++ b/firstaidcpd/firstaid_emergencyrecognition.html
@@ -95,6 +95,8 @@
  transform: rotateY(180deg);
  color: white;
  overflow-y: auto;
+ justify-content: flex-start;
+ padding-top: 25px;
  }
  
  .card-icon {
@@ -368,7 +370,7 @@
  <div class="flip-card" onclick="this.classList.toggle('flipped')">
  <div class="flip-card-inner">
  <div class="flip-card-front">
- <div class="card-icon">⚡</div>
+ <div class="card-icon">🧠</div>
  <div class="card-category">Neurological</div>
  <div class="card-title">Seizure</div>
  <div class="flip-instruction">Click to view recognition signs</div>
@@ -482,7 +484,7 @@
  <div class="flip-card" onclick="this.classList.toggle('flipped')">
  <div class="flip-card-inner">
  <div class="flip-card-front">
- <div class="card-icon">😵</div>
+ <div class="card-icon">🥴</div>
  <div class="card-category">Circulation</div>
  <div class="card-title">Fainting</div>
  <div class="flip-instruction">Click to view recognition signs</div>
