--- a/firstaidcpd/scenesafety.html
+++ b/firstaidcpd/scenesafety.html
@@ -78,7 +78,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <div class="container">
 <div class="cover-screen" onclick="startActivity()">
 <div class="cover-icon">⚠️</div>
-<div class="cover-title">Scene Safety Assessment</div>
+<div class="cover-title">Making Scenes Safe</div>
 <div class="cover-subtitle">Learn to assess and ensure scene safety before providing first aid</div>
 <button class="cover-button">Begin Learning →</button>
 </div>
