--- a/firstaidcpd/firstaid_emergencycall.html
+++ b/firstaidcpd/firstaid_emergencycall.html
@@ -66,7 +66,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <div class="cover-screen" onclick="showContent()">
 <div class="cover-icon">📞</div>
 <div class="cover-title">Calling Emergency Services</div>
-<div class="cover-subtitle">Learn when to call 999, what information to provide, and how to communicate effectively with emergency dispatchers</div>
+<div class="cover-subtitle">Learn when to call 999, what information to provide, and how to communicate effectively with emergency call handlers</div>
 <button class="cover-button">Begin Learning →</button>
 </div>
 <div class="main-content">
@@ -101,7 +101,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <li>When designated first aiders or facility protocols direct emergency service contact</li>
 </ul>
 <div class="info-box">
-<div class="info-box-text">⚠️ If in doubt, call 999. It's better to call and not need them than to delay in a genuine emergency. Dispatchers can help assess the situation.</div>
+<div class="info-box-text">⚠️ If in doubt, call 999. It's better to call and not need them than to delay in a genuine emergency. Call handlers can help assess the situation.</div>
 </div>
 </div>
 </div>
@@ -142,7 +142,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <div class="accordion-content-inner">
 <div class="accordion-text">If you're uncertain whether a situation requires emergency services:</div>
 <ul class="accordion-list">
-<li>Call 999 and describe the situation - dispatchers are trained to assess urgency</li>
+<li>Call 999 and describe the situation - call handlers are trained to assess urgency</li>
 <li>Consider: "Would I want someone to call for me in this situation?"</li>
 <li>Trust your instincts - if something feels seriously wrong, call</li>
 <li>Remember facility protocols may require 999 contact for specific situations</li>
@@ -173,32 +173,32 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <div class="checklist-icon">🩹</div>
 <div class="checklist-content">
 <div class="checklist-title">Current Actions</div>
-<div class="checklist-text"><strong>What to provide:</strong> Whether anyone is providing first aid, what is currently being done. Example: "Staff member providing CPR" or "Casualty in recovery position, being monitored." This helps dispatchers know what support you need and what's already happening.</div>
+<div class="checklist-text"><strong>What to provide:</strong> Whether anyone is providing first aid, what is currently being done. Example: "Staff member providing CPR" or "Casualty in recovery position, being monitored." This helps call handlers know what support you need and what's already happening.</div>
 </div>
 </div>
 <div class="checklist-item">
 <div class="checklist-icon">📱</div>
 <div class="checklist-content">
-<div class="checklist-title">Following Dispatcher Instructions</div>
-<div class="checklist-text">Emergency services dispatchers may provide instructions for actions to take while awaiting responder arrival. Follow these instructions carefully and confirm understanding. Dispatchers can talk untrained persons through CPR and other interventions if necessary. They remain on the line to provide ongoing guidance.</div>
+<div class="checklist-title">Following call handler Instructions</div>
+<div class="checklist-text">Emergency services call handlers may provide instructions for actions to take while awaiting responder arrival. Follow these instructions carefully and confirm understanding. Call handlers can talk untrained persons through CPR and other interventions if necessary. They remain on the line to provide ongoing guidance.</div>
 </div>
 </div>
 <div class="checklist-item">
 <div class="checklist-icon">⏳</div>
 <div class="checklist-content">
 <div class="checklist-title">Maintaining Communication</div>
-<div class="checklist-text">Remain on the line until told to hang up. This allows dispatchers to provide ongoing guidance and update responding crews if situations change. If you must hang up (to provide care or for safety), ensure someone knows you contacted emergency services and what instructions were provided. Have someone meet responders at the entrance.</div>
+<div class="checklist-text">Remain on the line until told to hang up. This allows call handlers to provide ongoing guidance and update responding crews if situations change. If you must hang up (to provide care or for safety), ensure someone knows you contacted emergency services and what instructions were provided. Have someone meet responders at the entrance.</div>
 </div>
 </div>
 </div>
 <div class="info-box" style="margin-top: 20px;">
-<div class="info-box-text">💡 <strong>Pro Tip:</strong> Speak clearly and calmly. The dispatcher needs to understand you. Take a breath before speaking if you feel panicked. It's okay to say "I'm not sure" - they can work with that.</div>
+<div class="info-box-text">💡 <strong>Pro Tip:</strong> Speak clearly and calmly. The call handler needs to understand you. Take a breath before speaking if you feel panicked. It's okay to say "I'm not sure" - they can work with that.</div>
 </div>
 </div>
 <div class="tab-content">
 <div class="video-section">
 <div class="video-title">Example 999 Emergency Call</div>
-<div class="video-subtitle">Listen to this example call for a medical emergency at a leisure centre in Birmingham. Notice how the caller provides clear information and follows dispatcher instructions.</div>
+<div class="video-subtitle">Listen to this example call for a medical emergency at a leisure centre in Birmingham. Notice how the caller provides clear information and follows call handler instructions.</div>
 <div class="video-container">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_jZ8Y2SRHcg?si=qTNkG5--10n-PLFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
@@ -210,7 +210,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <li><strong>Casualty Status:</strong> Immediate information about consciousness and breathing status</li>
 <li><strong>What Happened:</strong> Brief explanation of the incident (collapsed during exercise)</li>
 <li><strong>Current Actions:</strong> Confirms first aid is being provided and by whom</li>
-<li><strong>Following Instructions:</strong> The caller listens to and acknowledges dispatcher guidance</li>
+<li><strong>Following Instructions:</strong> The caller listens to and acknowledges call handler guidance</li>
 <li><strong>Remaining Calm:</strong> Despite the emergency, information is conveyed clearly and systematically</li>
 <li><strong>Meeting Responders:</strong> Arrangements made for someone to meet ambulance at entrance</li>
 </ul>
