--- a/firstaidcpd/firstaid_emergencycall.html
+++ b/firstaidcpd/firstaid_emergencycall.html
@@ -200,7 +200,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <div class="video-title">Example 999 Emergency Call</div>
 <div class="video-subtitle">Listen to this example call for a medical emergency at a leisure centre in Birmingham. Notice how the caller provides clear information and follows call handler instructions.</div>
 <div class="video-container">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_jZ8Y2SRHcg?si=qTNkG5--10n-PLFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fvBfeLY_eLE?si=v2_xKFb3sDRhebhN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </div>
 <div class="key-points">
