--- a/jobskills/building_a_CV.html
+++ b/jobskills/building_a_CV.html
@@ -111,7 +111,7 @@
 
         .cv-grid {
             display: grid;
-            grid-template-columns: 1fr;
+            grid-template-columns: 1fr 1fr;
             gap: 20px;
             margin-bottom: 20px;
         }
@@ -122,8 +122,7 @@
         }
 
         .cv-column.spotlight-column {
-            order: -1;
-            margin-bottom: 10px;
+            order: 0;
         }
 
         .column-label {
@@ -139,39 +138,41 @@
             background: #f5f5f5;
             border: 1px solid #ddd;
             border-radius: 8px;
-            padding: 30px;
-            font-size: 13px;
-            line-height: 1.8;
+            padding: 20px;
+            font-size: 12px;
+            line-height: 1.6;
             color: #333;
+            max-height: 600px;
+            overflow-y: auto;
         }
 
         .cv-header {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 12px;
             border-bottom: 2px solid #C6A906;
-            padding-bottom: 16px;
+            padding-bottom: 10px;
         }
 
         .cv-name {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 700;
-            margin-bottom: 6px;
+            margin-bottom: 4px;
         }
 
         .cv-contact {
-            font-size: 12px;
+            font-size: 11px;
             color: #666;
         }
 
         .cv-section {
-            margin-bottom: 18px;
+            margin-bottom: 10px;
         }
 
         .cv-section.clickable {
             cursor: pointer;
             transition: all 0.2s ease;
             border-radius: 4px;
-            padding: 8px;
+            padding: 6px;
         }
 
         .cv-section.clickable:hover {
@@ -185,45 +186,47 @@
         }
 
         .cv-section-title {
-            font-size: 12px;
+            font-size: 11px;
             font-weight: 700;
             text-transform: uppercase;
             color: #C6A906;
-            letter-spacing: 1px;
-            margin-bottom: 8px;
+            letter-spacing: 0.5px;
+            margin-bottom: 4px;
             border-bottom: 1px solid #ddd;
-            padding-bottom: 4px;
+            padding-bottom: 2px;
         }
 
         .cv-content {
-            margin-left: 8px;
+            margin-left: 4px;
         }
 
         .cv-job {
-            margin-bottom: 12px;
+            margin-bottom: 8px;
         }
 
         .cv-job-title {
             font-weight: 700;
-            margin-bottom: 2px;
+            font-size: 12px;
+            margin-bottom: 1px;
         }
 
         .cv-job-meta {
-            font-size: 12px;
+            font-size: 11px;
             color: #666;
-            margin-bottom: 6px;
+            margin-bottom: 4px;
         }
 
         .cv-bullet {
-            margin-left: 16px;
-            margin-bottom: 4px;
+            margin-left: 12px;
+            margin-bottom: 2px;
+            font-size: 11px;
         }
 
         .cv-bullet:before {
             content: '▸ ';
             color: #C6A906;
             font-weight: bold;
-            margin-right: 6px;
+            margin-right: 4px;
         }
 
         .spotlight-panel {
@@ -232,6 +235,8 @@
             border-radius: 8px;
             padding: 16px;
             min-height: 400px;
+            max-height: 600px;
+            overflow-y: auto;
             flex: 1;
         }
 
@@ -251,23 +256,23 @@
         }
 
         .spotlight-title {
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 700;
             color: #2196F3;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: 6px;
         }
 
         .spotlight-commentary {
             background: white;
             border: 1px solid #2196F3;
             border-radius: 6px;
-            padding: 12px;
-            margin-bottom: 12px;
-            font-size: 13px;
-            line-height: 1.6;
+            padding: 10px;
+            margin-bottom: 10px;
+            font-size: 12px;
+            line-height: 1.5;
             color: #555;
         }
 
@@ -278,12 +283,12 @@
         .spotlight-section {
             background: #f9f9f9;
             border-left: 3px solid #2196F3;
-            padding: 12px;
+            padding: 8px;
             border-radius: 4px;
-            font-size: 12px;
-            line-height: 1.6;
+            font-size: 11px;
+            line-height: 1.4;
             color: #555;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
         }
 
         .print-hint {
